default canvas project with pan and zoom feature

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    vertical-align: top;
+}
+
+html, body {
+    touch-action: none;
+    background-color: #111;
+    color: white;
+}
+
+#wrapper {
+    height: 100vh;
+}
