--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="content">
   <!-- <app-scene01></app-scene01>  -->
   <!-- <app-scene02></app-scene02> -->
-  <app-scene03></app-scene03>
+  <!-- <app-scene03></app-scene03> -->
+  <app-scene04></app-scene04>
 </div>
