--- a/projects/sandbox/src/app/scenes/movement-test/movement-test.component.html
+++ b/projects/sandbox/src/app/scenes/movement-test/movement-test.component.html
@@ -1,1 +1,6 @@
+<!-- <script id="offscreen_canvas_worker" type="text/javascript">
+    self.onmessage = function (e) {
+        self.postMessage(e);
+    };
+</script> -->
 <canvas #c></canvas>
