--- a/projects/sandbox/src/app/app.component.html
+++ b/projects/sandbox/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- <app-element-test></app-element-test> -->
 <!-- <app-particle-test></app-particle-test> -->
 <!-- <app-ray-test></app-ray-test> -->
-<app-movement-test></app-movement-test>
+<app-polygon-test></app-polygon-test>
