--- a/projects/sandbox/src/app/app.component.html
+++ b/projects/sandbox/src/app/app.component.html
@@ -2,3 +2,4 @@
 <!-- <app-particle-test></app-particle-test> -->
 <!-- <app-ray-test></app-ray-test> -->
 <compose-scene></compose-scene>
+<!-- <sprite-loader></sprite-loader> -->
